# uchile_tools

bender_turning_base/: CMakeLists.txt  package.xml  setup.py
bender_turning_base/install/: install.sh
uchile_battery_sensor/: .gitignore  CMakeLists.txt  package.xml  plugin.xml  setup.py
uchile_battery_sensor/arduino/current_sensor/: current_sensor.ino
uchile_battery_sensor/src/uchile_battery_sensor/: battery_sensor_ros_interface.py  com_interface.py  file_manager.py  usb_receiver.py
uchile_cmd_vel_mux/: CMakeLists.txt
uchile_cmd_vel_mux/config/: mux.yaml  mux_jaime.yaml  safety_mux.yaml  safety_mux_jaime.yaml
uchile_cmd_vel_mux/launch/: mux.launch  mux_jaime.launch
uchile_footprint_generator/: CMakeLists.txt
uchile_fun/: CMakeLists.txt  package.xml
uchile_fun/shell/: setup.sh
uchile_gui_subtitles/: CMakeLists.txt
uchile_laser_pipeline/: CMakeLists.txt  package.xml
uchile_laser_pipeline/cfg/: SelfFilter.cfg
uchile_laser_pipeline/config/: pipeline.yaml  pipeline_front.yaml  pipeline_rear.yaml
uchile_laser_pipeline/include/uchile_laser_pipeline/: self_filter.h
uchile_laser_pipeline/launch/: laser_cropper.launch  laser_pipeline.launch  pipeline.launch
uchile_laser_pipeline/src/: laser_cropper.cpp  laser_scan_filters.cpp  self_filter.cpp
uchile_report_generator/: CMakeLists.txt
uchile_report_generator/src/: report_generator.cpp
uchile_report_generator/tex/: Homebreakers_1.tex
uchile_report_generator/tex/map/: .gitignore
uchile_report_generator/tex/templates/: img.tex  main.tex  map.tex
uchile_rosbag_record/: CMakeLists.txt  package.xml  setup.py
uchile_rosbag_record/launch/: rosbag_record.launch
uchile_rosbag_record/src/uchile_rosbag_record/: rosbag_remote_control.py
uchile_rqt_batteries/: CMakeLists.txt  setup.py
uchile_rqt_batteries/config/: new_batteries.yaml
uchile_rqt_batteries/launch/: rqt_battery_pack.launch
uchile_rqt_batteries/scripts/: battery_pack_pub.py
uchile_safety/: CMakeLists.txt  package.xml
uchile_safety/config/: safety.yaml  safety_jaime.yaml
uchile_safety/launch/: safety.launch  safety_jaime.launch
uchile_safety/src/: low_level_safety_control.py  safety.py
