<?xml version="1.0"?>
<package>
  <name>uchile_rosbag_record</name>
  <version>0.0.1</version>
  <description>uchile_rosbag_record
  </description>

    <maintainer email="luz.martinez@amtc.cl">Luz Martinez</maintainer>
    <author>Luz Martinez</author>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>


  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <export>
  </export>
</package>


